--- a/devel/pom.xml
+++ b/devel/pom.xml
@@ -90,6 +90,9 @@ along with semanticcms-core-servlet.  If not, see <https://www.gnu.org/licenses/
 			<releases>
 				<enabled>false</enabled>
 			</releases>
+			<snapshots>
+				<checksumPolicy>fail</checksumPolicy>
+			</snapshots>
 		</repository>
 	</repositories>
 
