--- a/devel/pom.xml
+++ b/devel/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 semanticcms-core-servlet - Java API for modeling web page content and relationships in a Servlet environment.
-Copyright (C) 2020, 2021  AO Industries, Inc.
+Copyright (C) 2020, 2021, 2022  AO Industries, Inc.
     support@aoindustries.com
     7262 Bull Pen Cir
     Mobile, AL 36695
@@ -34,6 +34,8 @@ along with semanticcms-core-servlet.  If not, see <https://www.gnu.org/licenses/
 
 	<properties>
 		<module.name>com.semanticcms.core.servlet.devel</module.name>
+		<!-- SonarQube -->
+		<sonar.projectKey>${project.groupId}:${project.artifactId}:1.x</sonar.projectKey>
 	</properties>
 
 	<name>SemanticCMS Core Servlet Devel</name>
