--- a/book/pom.xml
+++ b/book/pom.xml
@@ -29,7 +29,7 @@ along with semanticcms-core-servlet.  If not, see <https://www.gnu.org/licenses/
     <relativePath>../../../parent/pom.xml</relativePath>
   </parent>
 
-  <groupId>com.semanticcms</groupId><artifactId>semanticcms-core-servlet-book</artifactId><version>1.18.3-SNAPSHOT</version>
+  <groupId>com.semanticcms</groupId><artifactId>semanticcms-core-servlet-book</artifactId><version>1.18.3</version>
   <packaging>bundle</packaging>
 
   <properties>
@@ -76,7 +76,7 @@ along with semanticcms-core-servlet.  If not, see <https://www.gnu.org/licenses/
     <connection>scm:git:git://github.com/ao-apps/semanticcms-core-servlet.git</connection>
     <developerConnection>scm:git:git@github.com:ao-apps/semanticcms-core-servlet.git</developerConnection>
     <url>https://github.com/ao-apps/semanticcms-core-servlet</url>
-    <tag>HEAD</tag>
+    <tag>semanticcms-core-servlet-book-1.18.3</tag>
   </scm>
 
   <issueManagement>
