--- a/devel/pom.xml
+++ b/devel/pom.xml
@@ -33,6 +33,7 @@ along with semanticcms-core-servlet.  If not, see <https://www.gnu.org/licenses/
   <packaging>bundle</packaging>
 
   <properties>
+    <project.build.outputTimestamp>2023-02-08T21:06:04Z</project.build.outputTimestamp>
     <module.name>com.semanticcms.core.servlet.devel</module.name>
     <!-- SonarQube -->
     <sonar.projectKey>${project.groupId}:${project.artifactId}:1.x</sonar.projectKey>
